--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,13 @@ r0 = "1.0.0"
 riscv = "0.10"
 riscv-rt-macros = { path = "macros", version = "0.2.0" }
 
+[dependencies.ch32v1]
+# path = "../ch32-rs-nightlies/ch32v1"
+git = "https://github.com/ch32-rs/ch32-rs-nightlies.git"
+
+version = "0.1.6"
+features = ["rt"]
+
 [dev-dependencies]
 panic-halt = "0.2.0"
 
@@ -23,4 +30,5 @@ riscv-target = "0.1.2"
 
 [features]
 default = []
-ch32v103 = []
+interrupt = []
+ch32v103 = ["interrupt"]
