Fixed referring git repository address.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ch32v-rt"
-version = "0.0.1"
+version = "0.0.2"
 rust-version = "1.59"
 repository = "https://github.com/rust-embedded/riscv-rt"
 authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
@@ -17,8 +17,8 @@ riscv-rt-macros = { path = "macros", version = "0.2.0" }
 
 [dependencies.ch32v1]
 #path = "../ch32-rs-nightlies/ch32v1"
-# git = "https://github.com/ch32-rs/ch32-rs-nightlies.git"
-git = "https://github.com/nosuz/ch32-rs-nightlies.git"
+# git = "https://github.com/ch32-rs/ch32-rs-nightlies"
+git = "https://github.com/nosuz/ch32-rs-nightlies"
 
 version = "0.1.6"
 features = ["rt"]
